--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -28,34 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_psd(signals_f, ax=None):\n",
-    "    # signals_f shape: times, 4, 32\n",
-    "    # read off from plot: \n",
-    "    slope = (4000 - 1000) / (285 - 90)\n",
-    "    offset = -500\n",
-    "    delta = 50\n",
-    "\n",
-    "    # freqs_window = offset + slope * times\n",
-    "    times_window = (frequencies - offset) / slope\n",
-    "    \n",
-    "    if ax is not None:\n",
-    "        ax.plot(times_window-delta, frequencies, color='red')\n",
-    "        ax.plot(times_window+delta, frequencies, color='red')\n",
-    "\n",
-    "    psd = np.zeros(signals_f.shape[1:]) # 4 x 32\n",
-    "    times = np.arange(signals_f.shape[0])\n",
-    "    for i, (t, f) in enumerate(zip(times_window, frequencies)):\n",
-    "        signals_window = signals_f[(times <= t + delta) & (times >= t - delta),:,i]\n",
-    "        psd[:, i] = np.sum(np.abs(signals_window)**2 /(2*delta), axis=0) / signals_window.shape[0]\n",
-    "    return psd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -63,65 +35,78 @@
    "source": [
     "from evaluate_data import read_df, integrate_yaw\n",
     "from dynamic_analysis import add_pose_to_df\n",
+    "from wall_analysis import get_psd\n",
     "\n",
     "exp_name = '2020_11_23_wall2'; \n",
+    "#fname = f'results/{exp_name}_simulated.pkl'\n",
+    "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
-    "df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
+    "try:\n",
+    "    df_total = pd.read_pickle(fname)\n",
+    "    frequencies = df_total.iloc[0].frequencies\n",
+    "except:\n",
+    "    print('could not read', fname)\n",
+    "    df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
     "\n",
-    "params = dict(\n",
-    "  props = False,\n",
-    "  snr = False,\n",
-    "  motors = False,\n",
-    "  exp_name = exp_name\n",
-    ")\n",
-    "for degree in [0, 27, 54, 81, 360]:\n",
-    "    for distance in [0, 10, 20, 30, 40, 50, 60, 70, 80, 90]:\n",
-    "        for source in ['mono4125', None, 'sweep']:\n",
-    "            try:\n",
-    "                params['degree'] = degree\n",
-    "                params['distance'] = distance\n",
-    "                params['source'] = source\n",
-    "                params['appendix'] = \"\"\n",
-    "                if distance in [10, 30, 50]:\n",
-    "                    params['appendix'] = \"_new\"\n",
-    "                df, df_pos = read_df(**params)\n",
-    "            except Exception as e:\n",
-    "                continue \n",
-    "                \n",
-    "            # detect index decrease (happens when two csv files are concatenated)\n",
-    "            sign = np.sign(df['index'].values[1:] - df['index'].values[:-1])\n",
-    "            if np.any(sign < 0):\n",
-    "                index = np.where(sign<0)[0][-1]\n",
-    "                print('Warning: found multiple start indices, start at', index)\n",
-    "                df = df.iloc[index:]\n",
-    "                index_start = df.iloc[0]['index']\n",
-    "                df_pos = df_pos.loc[df_pos.index >= index_start]\n",
-    "            \n",
-    "            signals_f = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
-    "            frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
-    "            frequencies = frequencies_matrix[0, :]\n",
-    "            assert not np.any(np.any(frequencies_matrix - frequencies[None, :], axis=0))\n",
-    "            \n",
-    "            if degree == 360:\n",
-    "                add_pose_to_df(df, df_pos, max_allowed_lag_ms=50)\n",
-    "                yaw = integrate_yaw(df.timestamp.values, df.yaw_rate_deg.values)\n",
-    "            else:\n",
-    "                yaw = np.full(len(df), -degree)\n",
-    "            \n",
-    "            spec = np.sum(np.abs(signals_f), axis=1)\n",
-    "            \n",
-    "            psd = get_psd(signals_f)\n",
-    "            \n",
-    "            df_total.loc[len(df_total), :] = dict(\n",
-    "                degree=degree,\n",
-    "                yaw=yaw,\n",
-    "                distance=distance,\n",
-    "                source=str(source),\n",
-    "                signals_f=signals_f,\n",
-    "                frequencies=frequencies,\n",
-    "                spec=spec,\n",
-    "                psd=psd\n",
-    "            )"
+    "    params = dict(\n",
+    "      props = False,\n",
+    "      snr = False,\n",
+    "      motors = False,\n",
+    "      exp_name = exp_name\n",
+    "    )\n",
+    "    \n",
+    "    for degree in [0, 27, 54, 81, 360]:\n",
+    "        for distance in [0, 10, 20, 30, 40, 50, 60, 70, 80, 90]:\n",
+    "            for source in ['mono4125', None, 'sweep']:\n",
+    "                try:\n",
+    "                    params['degree'] = degree\n",
+    "                    params['distance'] = distance\n",
+    "                    params['source'] = source\n",
+    "                    params['appendix'] = \"\"\n",
+    "                    if distance in [10, 30, 50]:\n",
+    "                        params['appendix'] = \"_new\"\n",
+    "                    df, df_pos = read_df(**params)\n",
+    "                except Exception as e:\n",
+    "                    continue \n",
+    "\n",
+    "                # detect index decrease (happens when two csv files are concatenated)\n",
+    "                sign = np.sign(df['index'].values[1:] - df['index'].values[:-1])\n",
+    "                if np.any(sign < 0):\n",
+    "                    index = np.where(sign<0)[0][-1]\n",
+    "                    print('Warning: found multiple start indices, start at', index)\n",
+    "                    df = df.iloc[index:]\n",
+    "                    index_start = df.iloc[0]['index']\n",
+    "                    df_pos = df_pos.loc[df_pos.index >= index_start]\n",
+    "\n",
+    "                signals_f = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
+    "                frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
+    "                frequencies = frequencies_matrix[0, :]\n",
+    "                assert not np.any(np.any(frequencies_matrix - frequencies[None, :], axis=0))\n",
+    "\n",
+    "                if degree == 360:\n",
+    "                    add_pose_to_df(df, df_pos, max_allowed_lag_ms=50)\n",
+    "                    yaw = integrate_yaw(df.timestamp.values, df.yaw_rate_deg.values)\n",
+    "                else:\n",
+    "                    yaw = np.full(len(df), -degree)\n",
+    "\n",
+    "                spec = np.sum(np.abs(signals_f), axis=1)\n",
+    "\n",
+    "                psd = get_psd(signals_f, frequencies, fname='real')\n",
+    "\n",
+    "                df_total.loc[len(df_total), :] = dict(\n",
+    "                    degree=degree,\n",
+    "                    yaw=yaw,\n",
+    "                    distance=distance,\n",
+    "                    source=str(source),\n",
+    "                    signals_f=signals_f,\n",
+    "                    frequencies=frequencies,\n",
+    "                    spec=spec,\n",
+    "                    psd=psd\n",
+    "                )\n",
+    "\n",
+    "    fname = f'results/{exp_name}_real.pkl'\n",
+    "    pd.to_pickle(df_total, fname)\n",
+    "    print('saved as', fname)"
    ]
   },
   {
@@ -130,9 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = f'results/{exp_name}_real.pkl'\n",
-    "pd.to_pickle(df_total, fname)\n",
-    "print('saved as', fname)"
+    "#for deg in [0, 27, 54, 81]:\n",
+    "    #df_total.loc[df_total.degree==deg, 'source'] = 'sweep'"
    ]
   },
   {
@@ -148,11 +132,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = f'results/{exp_name}_real.pkl'\n",
-    "#fname = f'results/{exp_name}_simulated.pkl'\n",
-    "df_total = pd.read_pickle(fname)\n",
-    "frequencies = df_total.iloc[0].frequencies\n",
-    "\n",
     "try:\n",
     "    row = df_total[(df_total.distance==90) & (df_total.degree==81) & (df_total.source=='sweep')].iloc[0]\n",
     "    spec = np.sum(np.abs(row.signals_f), axis=1)\n",
@@ -169,6 +148,8 @@
     "    plt.xlabel('frequency [Hz]')\n",
     "    plt.ylabel('PSD')\n",
     "    plt.title(f'degree {degree}, distance {distance}')\n",
+    "except ValueError:\n",
+    "    raise\n",
     "except:\n",
     "    print('did not find 90, 81, sweep in')\n",
     "    print(df_total.distance.unique())\n",
@@ -184,15 +165,15 @@
    },
    "outputs": [],
    "source": [
-    "degrees = [d for d in df_total.degree.unique() if d != 360]\n",
-    "distances = df_total.distance.unique()\n",
+    "degrees = [d for d in df_total.degree.unique() if d != 360][:2]\n",
+    "distances = df_total.distance.unique()[:3]\n",
     "source = 'sweep'\n",
     "\n",
     "fig, axs = plt.subplots(len(distances), len(degrees), sharex=True, sharey=True)\n",
-    "fig.set_size_inches(15, 15*axs.shape[0]/axs.shape[1])\n",
+    "fig.set_size_inches(10, 10*axs.shape[0]/axs.shape[1])\n",
     "\n",
     "fig_psd, axs_psd = plt.subplots(len(distances), len(degrees), sharex=True, sharey=True)\n",
-    "fig_psd.set_size_inches(15, 15*axs.shape[0]/axs.shape[1])\n",
+    "fig_psd.set_size_inches(10, 10*axs.shape[0]/axs.shape[1])\n",
     "for i, distance in enumerate(distances):\n",
     "    for j, degree in enumerate(degrees):\n",
     "        df_this = df_total.loc[(df_total.distance == distance)\n",
@@ -201,6 +182,8 @@
     "        row = df_this.iloc[0]\n",
     "        spec = row.spec\n",
     "        psd = row.psd\n",
+    "        if psd is None:\n",
+    "            psd = get_psd(row.signals_f)\n",
     "        \n",
     "        axs[i, j].pcolormesh(range(spec.shape[0]), frequencies, np.log10(spec.T))\n",
     "        for i_mic in range(psd.shape[0]):\n",
@@ -208,7 +191,10 @@
     "        axs[0, j].set_title(f'{degree} deg')\n",
     "        axs_psd[0, j].set_title(f'{degree} deg')\n",
     "    axs[i, 0].set_ylabel(f'{distance} cm')\n",
-    "    axs_psd[i, 0].set_ylabel(f'{distance} cm')"
+    "    axs_psd[i, 0].set_ylabel(f'{distance} cm')\n",
+    "    \n",
+    "[axs[-1, j].set_xlabel(f'time idx') for j in range(len(degrees))]\n",
+    "[axs_psd[-1, j].set_xlabel(f'frequency [Hz]') for j in range(len(degrees))]"
    ]
   },
   {
@@ -220,11 +206,12 @@
     "from constants import SPEED_OF_SOUND\n",
     "\n",
     "distance_ref = 90\n",
-    "distances = df_total.distance.unique()\n",
+    "distances = df_total.distance.unique()[:3]\n",
     "source = 'sweep'\n",
-    "n_mics = 4\n",
+    "n_mics = df_ref.iloc[0].signals_f.shape[1]\n",
+    "print('n_mics:', n_mics)\n",
     "    \n",
-    "for degree in [0, 27, 54, 81]:\n",
+    "for degree in [0, 27, 54, 81][:2]:\n",
     "    \n",
     "    df_ref = df_total.loc[(df_total.distance == distance_ref)\n",
     "                           & (df_total.degree == degree)\n",
@@ -234,7 +221,7 @@
     "    fig.set_size_inches(15, 5)\n",
     "    \n",
     "    for mic in range(n_mics):\n",
-    "        psd_ref = df_ref.iloc[0].psd[mic]\n",
+    "        psd_ref = df_ref.iloc[0].psd[mic] \n",
     "        for i, distance in enumerate(distances):\n",
     "            df_this = df_total.loc[(df_total.distance == distance)\n",
     "                                   & (df_total.degree == degree)\n",
@@ -264,7 +251,7 @@
     "distance_ref = 90\n",
     "mic = 0\n",
     "\n",
-    "for degree in [0, 27, 54, 81]:\n",
+    "for degree in [0, 27, 54, 81][:2]:\n",
     "    distances = df_total.distance.unique()\n",
     "    source = 'sweep'\n",
     "\n",
@@ -304,7 +291,7 @@
     "source = 'mono4125'\n",
     "degree = 360\n",
     "\n",
-    "distances = df_total.distance.unique()\n",
+    "distances = df_total.distance.unique()[:3]\n",
     "chosen_idx = np.where(frequencies == freq)[0][0]\n",
     "\n",
     "averages = []\n",
