--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -134,7 +134,7 @@
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
-    "    motors = True,\n",
+    "    motors = False,\n",
     "    source = 'mono4125',\n",
     "    exp_name = exp_name\n",
     ")\n",
@@ -162,6 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from evaluate_data import integrate_yaw\n",
     "csv_file = '../experiments/2020_11_13_speaker360/Yaw-20201113T16-29-16.csv'\n",
     "df_log = pd.read_csv(csv_file)\n",
     "print(df_log.head())\n",
@@ -365,6 +366,7 @@
     "                    pass\n",
     "\n",
     "                orientation_deg = row.yaw_deg\n",
+    "                print(orientation_deg)\n",
     "                timestamp = row.timestamp\n",
     "\n",
     "                R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
@@ -559,6 +561,16 @@
     "\n",
     "    fig, axs = plt.subplots(1, 3, sharey=True, sharex=True)\n",
     "    plot_results(fig, axs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plt.polar(BeamFormer.theta_scan, raw_heatmap[:, raw_heatmap.shape[1]//2])\n",
+    "plt.plot(BeamFormer.theta_scan_deg, raw_heatmap[:, raw_heatmap.shape[1]//2])"
    ]
   },
   {
