--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "def generate_room(distance_cm=0, yaw_deg=0, ax=None, single_mic=False, source='mono4125'):\n",
-    "    room_dim = np.array([50, 20])\n",
+    "    room_dim = np.array([10, 8])\n",
     "    yaw_offset = -120\n",
     "    x_offset = room_dim[0] / 2\n",
     "    y_offset = 0.1\n",
@@ -226,8 +226,8 @@
     "        plt.show()\n",
     "\n",
     "    interactive_plot = interact(update_figure, \n",
-    "                                slice_f=IntSlider(200, min=0, max=len(frequencies), continuous_update=False), \n",
-    "                                slice_d=IntSlider(50, min=0, max=len(distances), continuous_update=False))"
+    "                                slice_f=IntSlider(200, min=0, max=len(frequencies)-1, continuous_update=False), \n",
+    "                                slice_d=IntSlider(50, min=0, max=len(distances)-1, continuous_update=False))"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = np.linspace(0, 50, 100)\n",
+    "distances = np.linspace(0, 200, 200)\n",
     "frequencies = get_frequencies(FS)\n",
     "df_matrix = np.empty((len(frequencies), len(distances)))\n",
     "\n",
@@ -328,8 +328,8 @@
     "    room = generate_room(distance_cm=distance_cm, single_mic=True, source='multi')\n",
     "    \n",
     "    signals_f = get_signals_f(room)\n",
-    "    spec = np.sum(np.abs(signals_f), axis=1) / (signals_f.shape[1] * N_BUFFER)\n",
-    "    spec_time_avg = np.mean(spec, axis=0)\n",
+    "    spec = np.sum(np.abs(signals_f), axis=1) / (signals_f.shape[1] * N_BUFFER) # times x frequencies\n",
+    "    spec_time_avg = np.mean(spec, axis=0) \n",
     "    df_matrix[:, j] = spec_time_avg"
    ]
   },
@@ -343,7 +343,7 @@
     "df_matrix_theo = np.empty((len(frequencies_theo), len(distances)))\n",
     "\n",
     "for j, distance_cm in enumerate(distances):\n",
-    "    H = generate_rir(distance_cm=distance_cm, single_mic=True)[0]\n",
+    "    H = generate_rir(distance_cm=distance_cm, single_mic=True)[0] # \n",
     "    df_matrix_theo[:, j] = np.abs(H)"
    ]
   },
@@ -353,10 +353,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure()\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 5)\n",
     "freq_start = 5 \n",
-    "plt.pcolormesh(distances, frequencies[freq_start:], np.log10(df_matrix[freq_start:]))\n",
-    "matrix_slices(df_matrix[freq_start:], frequencies[freq_start:], distances)"
+    "freq_end = 200\n",
+    "distance_end = 20\n",
+    "plt.pcolormesh(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
+    "matrix_slices(df_matrix[freq_start:freq_end, :distance_end], frequencies[freq_start:freq_end], distances[:distance_end])"
    ]
   },
   {
@@ -383,13 +386,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from wall_analysis import get_psd\n",
     "import progressbar \n",
     "\n",
     "df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
     "\n",
     "exp_name = '2020_11_23_wall2'; \n",
-    "source = 'mono4125'\n",
-    "#source = 'sweep'\n",
     "n_times = 300\n",
     "\n",
     "min_freq=100\n",
@@ -432,14 +434,13 @@
     "                yaw = np.full(signals_f.shape[0], -degree)\n",
     "\n",
     "            spec = np.sum(np.abs(signals_f), axis=1)\n",
-    "            # TODO(FD): implement if needed. \n",
-    "            psd = None \n",
+    "            psd = get_psd(signals_f, frequencies, fname='simulated')\n",
     "\n",
     "            df_total.loc[len(df_total), :] = dict(\n",
     "                degree=degree,\n",
     "                yaw=yaw,\n",
     "                distance=distance_cm,\n",
-    "                source=str(source),\n",
+    "                source=sources[degree],\n",
     "                signals_f=signals_f,\n",
     "                frequencies=frequencies,\n",
     "                spec=spec,\n",
