Added 2020_11_30_wall_hover experiments

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "from evaluate_data import EXP_NAME, RES_DIRNAME, FS, DURATION_SEC\n",
-    "from evaluate_data import read_df, get_spectrogram, add_soundlevel\n",
+    "from evaluate_data import read_df, get_spectrogram, add_soundlevel, read_df_from_wav\n",
     "\n",
     "def custom_save(function=plt.savefig, fname=\"\"):\n",
     "    if not os.path.exists(os.path.dirname(fname)):\n",
@@ -61,40 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_df_from_wav(fname):\n",
-    "    from scipy.signal import stft\n",
-    "    from scipy.io import wavfile\n",
-    "    fs, source_data = wavfile.read(fname)\n",
-    "    \n",
-    "    n_buffer = 1024\n",
-    "    \n",
-    "    print(source_data.shape)\n",
-    "\n",
-    "    f, t, source_stft = stft(source_data, fs, nperseg=n_buffer, axis=0)\n",
-    "    print(source_stft.shape)\n",
-    "    \n",
-    "    source_freq = np.fft.rfftfreq(n=n_buffer, d=1/fs) # n_frequencies x n_times\n",
-    "\n",
-    "    df = pd.DataFrame(columns=df_source.columns)\n",
-    "    for i in range(source_stft.shape[1]):\n",
-    "        df.loc[len(df), :] = {\n",
-    "            \"index\": i,\n",
-    "            \"timestamp\": i * 1024/fs * 1000, # miliseconds\n",
-    "            \"n_mics\": 2,\n",
-    "            \"topic\": \"measurement_mic\",\n",
-    "            \"signals_f\": source_stft[:, i], \n",
-    "            \"frequencies\": source_freq,\n",
-    "            \"n_frequencies\": len(source_freq)\n",
-    "        }\n",
-    "    return df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,6 +79,7 @@
     "duration = DURATION_SEC * 1e3 # miliseconds from end\n",
     "\n",
     "exp_name = \"2020_09_17_white-noise-static\"\n",
+    "#exp_name = \"2020_10_14_static\"\n",
     "assert exp_name == EXP_NAME, \"watch out, possible discrepancy between evaluate_data.py and here\"\n",
     "\n",
     "source = \"random_linear\"\n",
@@ -196,7 +163,7 @@
     "    thresh = 1e-10\n",
     "print('reading', fname_source)\n",
     "\n",
-    "#df_wav_all = read_df_from_wav(fname_all) \n",
+    "df_wav_all = read_df_from_wav(fname_all) \n",
     "#df_wav_source = read_df_from_wav(fname_source) \n",
     "#df_wav_props = read_df_from_wav(fname_props) \n",
     "#df_wav_all.to_pickle(fname_all.replace('.wav', '.pk'))\n",
