--- a/notebooks/SignalAnalysis.ipynb
+++ b/notebooks/SignalAnalysis.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " # Signal analysis\n",
+    " \n",
+    " Analyze the performance of beamforming with different filtering schemes, such as snr-based filtering, props filtering, etc. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -164,13 +173,14 @@
     "combination_method = 'sum'\n",
     "\n",
     "#INVERSE = 'pinv'\n",
-    "#fname = f'SignalAnalysis_{exp_name}_pinv.pkl'\n",
+    "#fname = f'results/SignalAnalysis_{exp_name}_pinv.pkl'\n",
     "\n",
     "INVERSE = 'low-rank'\n",
-    "fname = f'SignalAnalysis_{exp_name}_low-rank.pkl'\n",
+    "fname = f'results/SignalAnalysis_{exp_name}_low-rank.pkl'\n",
     "\n",
     "try:\n",
     "    df_spectra = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
     "except:\n",
     "    df_spectra = pd.DataFrame(columns=[\n",
     "        'degree', \n",
@@ -245,7 +255,8 @@
    },
    "outputs": [],
    "source": [
-    "angles = BeamFormer.theta_scan\n",
+    "#angles = BeamFormer.theta_scan\n",
+    "angles = np.linspace(0, 360, df_spectra.iloc[0].raw_heatmap.shape[0])\n",
     "\n",
     "# TODO(FD): read these from parameters file\n",
     "min_freq = 200\n",
@@ -271,7 +282,7 @@
     "            times = row.times\n",
     "            plot_mask = (all_frequencies < max_freq) & (all_frequencies > min_freq)\n",
     "\n",
-    "            axs_spec[i, j].pcolormesh(times, angles*180/np.pi, heatmap)\n",
+    "            axs_spec[i, j].pcolormesh(times, angles, heatmap)\n",
     "            axs_spec[i, 0].set_ylabel(f\"snr {snr} props {props}\")\n",
     "            axs_spec[i, 1].set_ylabel(f\"snr {snr} props {props}\")"
    ]
