--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -320,8 +320,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = np.linspace(0, 200, 200)\n",
+    "distances = np.linspace(0, 20, 20)\n",
     "frequencies = get_frequencies(FS)\n",
+    "\n",
+    "\n",
     "df_matrix = np.empty((len(frequencies), len(distances)))\n",
     "\n",
     "for j, distance_cm in enumerate(distances):\n",
@@ -353,11 +355,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "min_freq = 900\n",
+    "max_freq = 1100\n",
+    "min_freq = 3000\n",
+    "max_freq = 4000\n",
+    "min_freq = 1000\n",
+    "max_freq = 5000\n",
+    "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
-    "freq_start = 5 \n",
-    "freq_end = 200\n",
-    "distance_end = 20\n",
+    "freq_start = int(min_freq / FS * N_BUFFER)\n",
+    "freq_end = int(max_freq / FS * N_BUFFER)\n",
+    "distance_end = 100\n",
     "plt.pcolormesh(distances[:distance_end], frequencies[freq_start:freq_end], np.log10(df_matrix[freq_start:freq_end, :distance_end]))\n",
     "matrix_slices(df_matrix[freq_start:freq_end, :distance_end], frequencies[freq_start:freq_end], distances[:distance_end])"
    ]
