Start wall analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -110,7 +110,6 @@
     "exp_name = '2020_11_30_wall_hover'; \n",
     "n_buffer = N_BUFFER \n",
     "fname_motors = get_fname(**kwargs)\n",
-    "print(fname_motors)\n",
     "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav', n_buffer=n_buffer)"
    ]
   },
@@ -128,11 +127,11 @@
    "outputs": [],
    "source": [
     "spec = get_spectrogram(df_motors)\n",
-    "max_freq_plot = 4000\n",
+    "max_freq_plot = 22050\n",
     "times = df_motors.timestamp.values\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1/44100)\n",
     "fig = plt.figure()\n",
-    "fig.set_size_inches(15, 10)\n",
+    "fig.set_size_inches(15, 20)\n",
     "plt.pcolormesh(times, frequencies[frequencies < max_freq_plot], np.log(spec[frequencies < max_freq_plot, :]))"
    ]
   },
@@ -176,16 +175,17 @@
    "outputs": [],
    "source": [
     "from evaluate_data import read_df_others\n",
-    "df_status, df_motors = read_df_others(**kwargs, exp_name=exp_name)\n",
+    "df_status, df_commands = read_df_others(**kwargs, exp_name=exp_name)\n",
     "\n",
-    "motors_pwm = np.array([*df_motors.loc[:, \"motors_pwm\"]])\n",
+    "motors_pwm = np.array([*df_commands.loc[:, \"motors_pwm\"]])\n",
     "print(motors_pwm.shape)\n",
     "\n",
     "fig, axs = plt.subplots(4)\n",
     "fig.set_size_inches(15, 10)\n",
     "axs[0].plot(df_status.timestamp / 1000, df_status.vbat, label=\"vbat\")\n",
     "for i in range(motors_pwm.shape[1]):\n",
-    "    axs[1].plot(df_motors.timestamp / 1000, motors_pwm[:, i], label=f\"motor {i}\")\n",
+    "    axs[1].plot(df_commands.timestamp / 1000, motors_pwm[:, i], label=f\"motor {i}\")\n",
+    "axs[1].set_ylabel('pwm signals')\n",
     "axs[2].plot(df_pos.timestamp / 1000, df_pos.dx, label=\"dx\")\n",
     "axs[2].plot(df_pos.timestamp / 1000, df_pos.dy, label=\"dy\")\n",
     "axs[2].set_ylim(-10, 10)\n",
@@ -197,7 +197,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Full pipeline "
+    "# buzzer chirp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kwargs = dict(\n",
+    "    degree=0,\n",
+    "    props=False,\n",
+    "    snr=False,\n",
+    "    motors=False,\n",
+    "    source='sweep_all',\n",
+    "    distance=50\n",
+    ")\n",
+    "exp_name = '2020_12_2_chirp'; \n",
+    "n_buffer = N_BUFFER \n",
+    "fname_chirp = get_fname(**kwargs)\n",
+    "df_chirp = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_chirp}.wav', n_buffer=n_buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec_chirp = get_spectrogram(df_chirp)\n",
+    "max_freq_plot = 22500\n",
+    "times = df_chirp.timestamp.values\n",
+    "frequencies = np.fft.rfftfreq(n_buffer, 1/44100)\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(15, 10)\n",
+    "plt.pcolormesh(times, frequencies[frequencies < max_freq_plot], np.log(spec_chirp[frequencies < max_freq_plot, :]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_time_zoom = 0.3e6\n",
+    "max_freq_zoom = 16000\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(15, 10)\n",
+    "times = df_chirp.timestamp.values\n",
+    "spec_zoom = spec_chirp[frequencies < max_freq_zoom, :]\n",
+    "spec_zoom = spec_zoom[:, times< max_time_zoom]\n",
+    "plt.pcolormesh(times[times<max_time_zoom], frequencies[frequencies < max_freq_zoom], np.log(spec_zoom))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec_motors = get_spectrogram(df_motors)\n",
+    "times_motors = df_motors.timestamp.values\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(15, 10)\n",
+    "plt.pcolormesh(times_motors, frequencies[frequencies < max_freq_plot], np.log(spec_motors[frequencies < max_freq_plot, :]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure() \n",
+    "plt.semilogy(frequencies, np.sum(spec_chirp, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Experimental distance-frequency matrix"
    ]
   },
   {
