--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -219,10 +219,12 @@
     "        axs[0].semilogy(distances, df_matrix[slice_f, :])\n",
     "        axs[0].set_title(f'frequency = {frequencies[slice_f]:.0f} Hz')\n",
     "        axs[0].set_xlabel('distance [cm]')\n",
+    "        axs[0].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
     "\n",
     "        axs[1].semilogy(frequencies, df_matrix[:, slice_d])\n",
     "        axs[1].set_title(f'distance = {distances[slice_d]:.0f} cm')\n",
     "        axs[1].set_xlabel('frequency [Hz]')\n",
+    "        axs[1].set_ylim(np.min(df_matrix), np.max(df_matrix))\n",
     "        plt.show()\n",
     "\n",
     "    interactive_plot = interact(update_figure, \n",
@@ -320,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = np.linspace(0, 20, 20)\n",
+    "distances = np.linspace(0, 20, 100)\n",
     "frequencies = get_frequencies(FS)\n",
     "\n",
     "\n",
@@ -355,12 +357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_freq = 900\n",
-    "max_freq = 1100\n",
-    "min_freq = 3000\n",
-    "max_freq = 4000\n",
-    "min_freq = 1000\n",
-    "max_freq = 5000\n",
+    "min_freq = 100\n",
+    "max_freq = 10000\n",
     "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
