--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -38,19 +38,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import read_df_from_wav, get_fname\n",
+    "from evaluate_data import read_df_from_wav, get_fname, read_df, get_spectrogram\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "\n",
+    "chosen_freqs_approx = np.array([3013, 3120, 3530, 3680, 4150, 4270, 5130, 5212, 6430, 6690, 8000, 8420, 10940, 13140, 14920]) # 4270, \n",
+    "\n",
+    "frequencies_embed = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "chosen_bins = [np.argmin(np.abs(f - frequencies_embed)) for f in chosen_freqs_approx]\n",
+    "chosen_freqs = frequencies_embed[chosen_bins]\n",
+    "\n",
+    "# harmonics\n",
+    "\n",
+    "higher_approx = chosen_freqs_approx * 3\n",
+    "chosen_bins_higher = [np.argmin(np.abs(f - frequencies_embed)) for f in higher_approx if f < 16000]\n",
+    "chosen_freqs_higher = frequencies_embed[chosen_bins_higher]\n",
+    "\n",
+    "lower_approx = list(chosen_freqs_approx[[2, 3, 4]] / 3) #, 11, 12, 13, 14]] / 3)\n",
+    "chosen_bins_lower = [np.argmin(np.abs(f - frequencies_embed)) for f in lower_approx]\n",
+    "chosen_freqs_lower = frequencies_embed[chosen_bins_lower]\n",
+    "\n",
+    "buzzer_freqs = sorted(list(chosen_freqs) + list(chosen_freqs_lower))\n",
+    "print('buzzer freqs', len(buzzer_freqs), buzzer_freqs)\n",
+    "\n",
+    "all_freqs = sorted(list(chosen_freqs) + list(chosen_freqs_higher) + list(chosen_freqs_lower) \n",
+    "                   + list(chosen_freqs_lower * 5) + list(chosen_freqs_lower * 7))\n",
+    "print('all freqs', len(all_freqs), all_freqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequencies_embed = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "all_bins = [np.argmin(np.abs(f - frequencies_embed)) for f in all_freqs]\n",
+    "print('bins:', all_bins)\n",
+    "\n",
+    "out_dir = \"../crazyflie-audio/firmware/audio_shield_firmware/Core/Inc\"\n",
+    "out_name = \"sweep_hard_bins.h\"\n",
+    "fname = f\"{out_dir}/{out_name}\"\n",
+    "\n",
+    "with open(fname, \"w+\") as f:\n",
+    "    f.write(f\"#ifndef __SWEEP_HARD_BINS_H \\n#define __SWEEP_HARD_BINS_H\\n\\n\")\n",
+    "\n",
+    "    f.write(f\"uint16_t sweep_hard_bins[32] = \" + r\"{\")\n",
+    "    [f.write(f\"{s:.0f}, \",) for s in all_bins[:-1]]\n",
+    "    [f.write(f\"{s:.0f}\",) for s in all_bins[-1:]]\n",
+    "    f.write(r\"};\" + \" \\n\\n\")\n",
+    "\n",
+    "    f.write(f\"#endif /* __SWEEP_HARD_BINS_H */\")\n",
+    "print('wrote as', fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# motors at hover"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## measurement mics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "kwargs = dict(\n",
     "    degree=0,\n",
     "    props=False,\n",
-    "    snr=False,\n",
+    "    snr=True,\n",
+    "    motors=True,\n",
+    "    source=None\n",
     ")\n",
-    "exp_name = '2020_10_14_static_new'; \n",
-    "fname_motors = get_fname(motors=True, source=None, **kwargs)\n",
-    "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav')\n",
-    "\n",
-    "exp_name = '2020_11_26_wall'; \n",
-    "fname_nomotors = get_fname(motors=False, source='sweep', distance=49, **kwargs)\n",
-    "df_nomotors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_nomotors}.wav')"
+    "exp_name = '2020_11_30_wall_hover'; \n",
+    "fname_motors = get_fname(**kwargs)\n",
+    "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav', n_buffer=N_BUFFER)"
    ]
   },
   {
@@ -61,85 +131,24 @@
    },
    "outputs": [],
    "source": [
-    "from evaluate_data import get_spectrogram\n",
-    "from bin_selection import select_frequencies\n",
-    "sys.path.append(f'../experiments/{exp_name}/')\n",
-    "from params import global_params\n",
-    "from crazyflie_description_py.parameters import SWEEPS, N_BUFFER, FS\n",
+    "spec_motors = get_spectrogram(df_motors)\n",
     "\n",
-    "max_time = 65\n",
-    "max_freq_plot = 15000\n",
-    "\n",
-    "__, (min_freq, max_freq), *_ = SWEEPS['sweep']\n",
-    "min_freq = 1000; max_freq = 9000\n",
-    "bins = select_frequencies(min_freq=min_freq, max_freq=max_freq, n_buffer=N_BUFFER, fs=FS)\n",
-    "frequencies_embed = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
-    "print(frequencies_embed[bins])\n",
-    "\n",
-    "for df in [df_motors, df_nomotors]:\n",
-    "    fig = plt.figure()\n",
-    "    fig.set_size_inches(15, 10)\n",
-    "    times = df.timestamp.values / 1000\n",
-    "    frequencies = df.iloc[0].frequencies\n",
-    "\n",
-    "    spec = get_spectrogram(df)\n",
-    "    spec = spec[frequencies < max_freq_plot, :]\n",
-    "    spec = spec[:, times < max_time]\n",
-    "    plt.pcolormesh(times[times < max_time], frequencies[frequencies < max_freq_plot], \n",
-    "                   np.log(spec))\n",
-    "    [plt.axhline(frequencies_embed[b], color='white', ls=':') for b in bins]\n",
-    "    plt.xlabel('time [s]')\n",
-    "    plt.ylabel('frequency [Hz]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from evaluate_data import read_df_from_wav, get_fname, read_df\n",
-    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
-    "kwargs = dict(\n",
-    "    degree=0,\n",
-    "    props=False,\n",
-    "    snr=True,\n",
-    "    motors=True,\n",
-    "    source=None\n",
-    ")\n",
-    "exp_name = '2020_11_30_wall_hover'; \n",
-    "n_buffer = N_BUFFER \n",
-    "fname_motors = get_fname(**kwargs)\n",
-    "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav', n_buffer=n_buffer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# measurement mics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spec = get_spectrogram(df_motors)\n",
-    "max_freq_plot = 22050\n",
-    "times = df_motors.timestamp.values\n",
-    "frequencies = np.fft.rfftfreq(N_BUFFER, 1/44100)\n",
+    "avg_motor_psd = np.mean(spec_motors[:, 250:1750], axis=1) # time range chosen from plot\n",
+    "times_motors = np.arange(spec_motors.shape[1]) #df_motors.timestamp.values\n",
+    "frequencies_motors = df_motors.iloc[0].frequencies\n",
+    "max_freq_plot = 16000\n",
     "fig = plt.figure()\n",
-    "fig.set_size_inches(15, 20)\n",
-    "plt.pcolormesh(times, frequencies[frequencies < max_freq_plot], np.log(spec[frequencies < max_freq_plot, :]))"
+    "fig.set_size_inches(15, 10)\n",
+    "plt.pcolormesh(times_motors, frequencies_motors[frequencies_motors < max_freq_plot], np.log(spec_motors[frequencies_motors < max_freq_plot, :]))\n",
+    "[plt.axhline(f, color='red', ls=':') for f in all_freqs]\n",
+    "pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# drone mics"
+    "##  drone mics"
    ]
   },
   {
@@ -217,7 +226,14 @@
     "exp_name = '2020_12_2_chirp'; \n",
     "n_buffer = N_BUFFER \n",
     "fname_chirp = get_fname(**kwargs)\n",
-    "df_chirp = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_chirp}.wav', n_buffer=n_buffer)"
+    "fname = f'results/{exp_name}_{fname_chirp}.pk'\n",
+    "try:\n",
+    "    df_chirp = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
+    "except:\n",
+    "    df_chirp = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_chirp}.wav', n_buffer=n_buffer)\n",
+    "    pd.to_pickle(df_chirp, fname)\n",
+    "    print('wrote', fname)"
    ]
   },
   {
@@ -226,13 +242,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from wall_analysis import extract_linear_psd\n",
+    "\n",
     "spec_chirp = get_spectrogram(df_chirp)\n",
-    "max_freq_plot = 22500\n",
-    "times = df_chirp.timestamp.values\n",
-    "frequencies = np.fft.rfftfreq(n_buffer, 1/44100)\n",
-    "fig = plt.figure()\n",
-    "fig.set_size_inches(15, 10)\n",
-    "plt.pcolormesh(times, frequencies[frequencies < max_freq_plot], np.log(spec_chirp[frequencies < max_freq_plot, :]))"
+    "signals_f = np.array([*df_chirp.loc[:, \"signals_f\"]])\n",
+    "times_chirp = np.arange(signals_f.shape[0])\n",
+    "frequencies_chirp = np.array(df_chirp.iloc[0].frequencies)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "\n",
+    "slope = 14930 / 21170 \n",
+    "offset = 0\n",
+    "psd = extract_linear_psd(signals_f, frequencies_chirp, slope, offset, delta=500, ax=ax)\n",
+    "\n",
+    "ax.pcolormesh(times_chirp, \n",
+    "              frequencies_chirp[frequencies_chirp<max_freq_plot], \n",
+    "              np.log10(spec_chirp[frequencies_chirp < max_freq_plot, :]))\n",
+    "ax.set_xlim(times_chirp[0], times_chirp[-1])\n",
+    "ax.set_ylim(0, max_freq_plot)"
    ]
   },
   {
@@ -241,14 +269,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_time_zoom = 0.3e6\n",
-    "max_freq_zoom = 16000\n",
+    "#%matplotlib notebook\n",
+    "\n",
     "fig = plt.figure()\n",
-    "fig.set_size_inches(15, 10)\n",
-    "times = df_chirp.timestamp.values\n",
-    "spec_zoom = spec_chirp[frequencies < max_freq_zoom, :]\n",
-    "spec_zoom = spec_zoom[:, times< max_time_zoom]\n",
-    "plt.pcolormesh(times[times<max_time_zoom], frequencies[frequencies < max_freq_zoom], np.log(spec_zoom))"
+    "plt.title('psd of buzzer frequency sweep')\n",
+    "fig.set_size_inches(10, 10)\n",
+    "plt.semilogy(frequencies_chirp[1:], psd[0, 1:], color='C0', label='buzzer')\n",
+    "[plt.axvline(f, color='C1') for f in chosen_freqs]\n",
+    "[plt.axvline(f, color='C3') for f in chosen_freqs_lower]\n",
+    "[plt.axvline(f, color='C2') for f in chosen_freqs_higher]\n",
+    "plt.axvline(chosen_freqs[0], color='C1', label='buzzer frequency')\n",
+    "plt.axvline(chosen_freqs_lower[0], color='C3', label='buzzer frequency (lower)')\n",
+    "plt.axvline(chosen_freqs_higher[0], color='C2', label='sensing frequency')\n",
+    "plt.semilogy(frequencies_motors[1:], avg_motor_psd[1:], label='motors (average during hover)', color='C4')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.xlim(frequencies_chirp[1], 16000)\n",
+    "plt.grid(which='both')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# motors at constant thrust and old frequency sweep"
    ]
   },
   {
@@ -257,21 +300,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_motors = get_spectrogram(df_motors)\n",
-    "times_motors = df_motors.timestamp.values\n",
-    "fig = plt.figure()\n",
-    "fig.set_size_inches(15, 10)\n",
-    "plt.pcolormesh(times_motors, frequencies[frequencies < max_freq_plot], np.log(spec_motors[frequencies < max_freq_plot, :]))"
+    "kwargs = dict(\n",
+    "    degree=0,\n",
+    "    props=False,\n",
+    "    snr=False,\n",
+    ")\n",
+    "exp_name = '2020_10_14_static_new'; \n",
+    "fname_motors = get_fname(motors=True, source=None, **kwargs)\n",
+    "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav')\n",
+    "\n",
+    "exp_name = '2020_11_26_wall'; \n",
+    "fname_nomotors = get_fname(motors=False, source='sweep', distance=49, **kwargs)\n",
+    "df_nomotors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_nomotors}.wav')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "plt.figure() \n",
-    "plt.semilogy(frequencies, np.sum(spec_chirp, axis=1))"
+    "from bin_selection import select_frequencies\n",
+    "sys.path.append(f'../experiments/{exp_name}/')\n",
+    "from params import global_params\n",
+    "from crazyflie_description_py.parameters import SWEEPS, N_BUFFER, FS\n",
+    "\n",
+    "max_time = 65\n",
+    "max_freq_plot = 15000\n",
+    "\n",
+    "__, (min_freq, max_freq), *_ = SWEEPS['sweep']\n",
+    "min_freq = 1000; max_freq = 9000\n",
+    "bins = select_frequencies(min_freq=min_freq, max_freq=max_freq, n_buffer=N_BUFFER, fs=FS)\n",
+    "frequencies_embed = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "print(frequencies_embed[bins])\n",
+    "\n",
+    "for df in [df_motors, df_nomotors]:\n",
+    "    fig = plt.figure()\n",
+    "    fig.set_size_inches(15, 10)\n",
+    "    times = df.timestamp.values / 1000\n",
+    "    frequencies = df.iloc[0].frequencies\n",
+    "\n",
+    "    spec = get_spectrogram(df)\n",
+    "    spec = spec[frequencies < max_freq_plot, :]\n",
+    "    spec = spec[:, times < max_time]\n",
+    "    plt.pcolormesh(times[times < max_time], frequencies[frequencies < max_freq_plot], \n",
+    "                   np.log(spec))\n",
+    "    [plt.axhline(frequencies_embed[b], color='white', ls=':') for b in bins]\n",
+    "    plt.xlabel('time [s]')\n",
+    "    plt.ylabel('frequency [Hz]')"
    ]
   },
   {
@@ -293,8 +371,8 @@
     "from dynamic_analysis import add_pose_to_df\n",
     "from wall_analysis import get_psd\n",
     "\n",
-    "#exp_name = '2020_11_23_wall2'; distances = np.arange(100, step=10)\n",
-    "exp_name = '2020_11_26_wall'; distances = np.arange(50)\n",
+    "exp_name = '2020_11_23_wall2'; distances = np.arange(100, step=10)\n",
+    "#exp_name = '2020_11_26_wall'; distances = np.arange(50)\n",
     "\n",
     "#fname = f'results/{exp_name}_simulated.pkl'\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
@@ -303,7 +381,6 @@
     "DEGREE_LIST = [0, 27, 54, 81, 360]\n",
     "\n",
     "try:\n",
-    "    raise\n",
     "    df_total = pd.read_pickle(fname)\n",
     "    frequencies = df_total.iloc[0].frequencies\n",
     "    print('read', fname)\n",
@@ -387,8 +464,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_matrix_mics = np.empty((n_mics, len(frequencies), len(distances)))\n",
     "n_mics = df_total.iloc[0].signals_f.shape[1]\n",
+    "df_matrix_mics = np.empty((n_mics, len(frequencies), len(distances)))\n",
     "normalize = False\n",
     "\n",
     "if normalize:\n",
