--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -323,14 +323,14 @@
    "outputs": [],
    "source": [
     "from bin_selection import select_frequencies\n",
-    "sys.path.append(f'../experiments/{exp_name}/')\n",
-    "from params import global_params\n",
-    "from crazyflie_description_py.parameters import SWEEPS, N_BUFFER, FS\n",
+    "#sys.path.append(f'../experiments/{exp_name}/')\n",
+    "#import params as params_buzz\n",
+    "from crazyflie_description_py.parameters import SOUND_EFFECTS, N_BUFFER, FS\n",
     "\n",
     "max_time = 65\n",
     "max_freq_plot = 15000\n",
     "\n",
-    "__, (min_freq, max_freq), *_ = SWEEPS['sweep']\n",
+    "#__, (min_freq, max_freq), *_ = SOUND_EFFECTS['sweep']\n",
     "min_freq = 1000; max_freq = 9000\n",
     "bins = select_frequencies(min_freq=min_freq, max_freq=max_freq, n_buffer=N_BUFFER, fs=FS)\n",
     "frequencies_embed = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
@@ -360,9 +360,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old experiments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -371,8 +383,8 @@
     "from dynamic_analysis import add_pose_to_df\n",
     "from wall_analysis import get_psd\n",
     "\n",
-    "exp_name = '2020_11_23_wall2'; distances = np.arange(100, step=10)\n",
-    "#exp_name = '2020_11_26_wall'; distances = np.arange(50)\n",
+    "exp_name = '2020_11_23_wall2'; DISTANCE_LIST = np.arange(100, step=10)\n",
+    "#exp_name = '2020_11_26_wall'; DISTANCE_LIST = np.arange(50)\n",
     "\n",
     "#fname = f'results/{exp_name}_simulated.pkl'\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
@@ -386,7 +398,8 @@
     "    print('read', fname)\n",
     "except:\n",
     "    print('could not read', fname)\n",
-    "    df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
+    "    df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', \n",
+    "                                     'frequencies'])\n",
     "\n",
     "    params = dict(\n",
     "      props = False,\n",
@@ -396,7 +409,7 @@
     "    )\n",
     "    \n",
     "    for degree in DEGREE_LIST:\n",
-    "        for distance in distances:\n",
+    "        for distance in DISTANCE_LIST:\n",
     "            for source in SOURCE_LIST:\n",
     "                try:\n",
     "                    params['degree'] = degree\n",
@@ -446,6 +459,358 @@
     "    fname = f'results/{exp_name}_real.pkl'\n",
     "    pd.to_pickle(df_total, fname)\n",
     "    print('saved as', fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from evaluate_data import read_df, read_df_from_wav, get_fname\n",
+    "from wall_analysis import get_psd\n",
+    "\n",
+    "exp_name = '2020_12_7_moving'; appendix_list = [\"\", \"_new\"]; snr_list = [0, 1]\n",
+    "max_value = 100 # all signals received are actually between 0 and 2. \n",
+    "fname = f'results/{exp_name}_real.pkl'\n",
+    "\n",
+    "sys.path = [p for p in sys.path if not 'experiments' in p]\n",
+    "sys.path.insert(0, f'../experiments/{exp_name}')\n",
+    "from params import SOURCE_LIST, DISTANCE_LIST, DEGREE_LIST, MOTORS_LIST\n",
+    "N_BUFFER = 2048\n",
+    "\n",
+    "try:\n",
+    "    raise\n",
+    "    df_total = pd.read_pickle(fname)\n",
+    "    frequencies = df_total.iloc[0].frequencies\n",
+    "    print('read', fname)\n",
+    "except:\n",
+    "    print('could not read', fname)\n",
+    "    df_total = pd.DataFrame(columns=['signals_f', 'degree', 'distance', 'source', 'snr', \n",
+    "                                     'motors', 'psd', 'spec', 'frequencies', 'appendix', 'seconds', 'mic_type', 'frequencies_matrix'])\n",
+    "\n",
+    "    params = dict(\n",
+    "        props = False,\n",
+    "        exp_name = exp_name\n",
+    "    )\n",
+    "    for degree, distance, source, motors, appendix, snr in itertools.product(DEGREE_LIST, \n",
+    "                                                                        DISTANCE_LIST, \n",
+    "                                                                        SOURCE_LIST, \n",
+    "                                                                        MOTORS_LIST, \n",
+    "                                                                        appendix_list, \n",
+    "                                                                        snr_list): \n",
+    "        try:\n",
+    "            params['motors'] = motors\n",
+    "            params['degree'] = degree\n",
+    "            params['distance'] = distance\n",
+    "            params['source'] = source\n",
+    "            params['appendix'] = appendix\n",
+    "            params['snr'] = snr\n",
+    "            df_csv, __ = read_df(**params)\n",
+    "            \n",
+    "            fname = get_fname(**params)\n",
+    "            df_wav = read_df_from_wav(f'../experiments/{exp_name}/export/{fname}.wav', n_buffer=N_BUFFER)\n",
+    "            \n",
+    "        except FileNotFoundError as e:\n",
+    "            continue \n",
+    "            \n",
+    "        for mic_type, df in zip(['audio_deck', 'measurement'], [df_csv, df_wav]):\n",
+    "            \n",
+    "            signals_f = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
+    "            if np.any(np.abs(signals_f) > max_value):\n",
+    "                signals_f[np.where(np.abs(signals_f) > max_value)] = 0\n",
+    "\n",
+    "            seconds = (df.timestamp.values - df.iloc[0].timestamp) / 1000\n",
+    "            frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
+    "            frequencies = frequencies_matrix[0, :]\n",
+    "            # save frequency matrix only if frequencies vary.\n",
+    "            if not np.any(np.any(frequencies_matrix - frequencies[None, :], axis=0)):\n",
+    "                frequencies_matrix = None\n",
+    "            else:\n",
+    "                print('saving frequencies matrix')\n",
+    "            \n",
+    "            spec = np.sum(np.abs(signals_f), axis=1)\n",
+    "            psd = get_psd(signals_f, frequencies, fname='real')\n",
+    "\n",
+    "            params['source'] = str(params['source'])\n",
+    "            all_items = dict(\n",
+    "                mic_type=mic_type,\n",
+    "                signals_f=signals_f,\n",
+    "                frequencies=frequencies,\n",
+    "                frequencies_matrix=frequencies_matrix,\n",
+    "                spec=spec,\n",
+    "                psd=psd,\n",
+    "                seconds=seconds\n",
+    "            )\n",
+    "            all_items.update(params)\n",
+    "            df_total.loc[len(df_total), :] = all_items\n",
+    "\n",
+    "    fname = f'results/{exp_name}_real.pkl'\n",
+    "    pd.to_pickle(df_total, fname)\n",
+    "    print('saved as', fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## sanity checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row_wav = df_total.loc[df_total.mic_type=='measurement', :].iloc[0]\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(5, 5)\n",
+    "ax.pcolorfast(row_wav.seconds, row_wav.frequencies, np.log(row_wav.spec.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, row in df_total.iterrows():\n",
+    "    plt.plot(row.seconds, row.seconds + i * 10, label=f'row {i}')\n",
+    "plt.legend(bbox_to_anchor=(1.0, 0), loc='lower left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df_meas = df_total.loc[df_total.mic_type == 'audio_deck', :]\n",
+    "for chosen_source, df_this in df_meas.groupby('source'):\n",
+    "    for app, df_app in df_this.groupby('appendix'):\n",
+    "        fig, axs = plt.subplots(1, 2)\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        fig.suptitle(chosen_source + app)\n",
+    "\n",
+    "        for j, (motors, df_motors) in enumerate(df_app.groupby('motors')):\n",
+    "            assert len(df_motors) <= 1, f\"{len(df_motors)} findings for {app, motors, chosen_source}\"\n",
+    "            \n",
+    "            row = df_motors.iloc[0]\n",
+    "            frequencies = row.frequencies\n",
+    "            \n",
+    "            signals_f = row.signals_f\n",
+    "            if motors != 'all43000':\n",
+    "                signals_f = signals_f[::-1, :, :]\n",
+    "            \n",
+    "            if not chosen_source in ('None', None):\n",
+    "                freq = int(chosen_source.strip('mono'))\n",
+    "                bin_ = np.argmin(abs(frequencies - freq))\n",
+    "                assert int(frequencies[bin_]) == freq\n",
+    "            else: \n",
+    "                bin_ = np.argmax(np.sum(np.abs(signals_f), axis=(0, 1))) \n",
+    "                print('max frequency without source:', frequencies[bin_])\n",
+    "                \n",
+    "            seconds = row.seconds\n",
+    "\n",
+    "            for mic_idx in range(4):\n",
+    "                spec = np.abs(signals_f[:, mic_idx, :]) # times x frequencies\n",
+    "                axs[j].plot(seconds, spec[:, bin_], label=f'mic{mic_idx}')\n",
+    "                axs[j].set_title(f'motors {motors}')\n",
+    "            \n",
+    "            axs[j].legend(loc='upper right')\n",
+    "            #axs[j].set_ylim(0, 2)\n",
+    "            axs[j].set_xlim(0, 180)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_by_dicts(df, dicts):\n",
+    "    mask = np.zeros(len(df_total), dtype=bool)\n",
+    "    for dict_ in dicts:\n",
+    "        this_mask = np.ones(len(df_total), dtype=bool)\n",
+    "        for key, val in dict_.items():\n",
+    "            this_mask = this_mask & (df_total.loc[:, key] == val)\n",
+    "        mask = np.bitwise_or(mask, this_mask)\n",
+    "    return df_total.loc[mask, :]\n",
+    "    \n",
+    "motors = \"all43000\"\n",
+    "chosen_dicts = [\n",
+    "    {\"source\": \"mono3125\", \"motors\": 0, \"appendix\":\"\"},\n",
+    "    {\"source\": \"mono3125\", \"motors\": motors, \"appendix\":\"_new\"},\n",
+    "    {\"source\": \"mono4156\", \"motors\": 0, \"appendix\":\"\"},\n",
+    "    {\"source\": \"mono4156\", \"motors\": motors, \"appendix\":\"_new\"},\n",
+    "    {\"source\": \"mono8000\", \"motors\": 0, \"appendix\":\"_new\"},\n",
+    "    {\"source\": \"mono8000\", \"motors\": motors, \"appendix\":\"\"},\n",
+    "    {\"source\": \"None\", \"motors\": motors, \"appendix\":\"_new\"},\n",
+    "]\n",
+    "    \n",
+    "df_chosen = filter_by_dicts(df_total, chosen_dicts)\n",
+    "assert len(df_chosen) == 2*len(chosen_dicts) # times 2 because of mic_type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## spectrograms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mic_type = 'measurement'\n",
+    "for chosen_source, df_source in df_chosen[df_chosen.mic_type==mic_type].groupby('source'):\n",
+    "    \n",
+    "    fig, axs = plt.subplots(1, 2, squeeze=False)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    fig.suptitle(chosen_source)\n",
+    "    \n",
+    "    for j, (motors, df_this) in enumerate(df_source.groupby('motors')):\n",
+    "        \n",
+    "        assert len(df_this) == 1\n",
+    "        row = df_this.iloc[0]\n",
+    "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log(row.spec.T))\n",
+    "        axs[0, j].set_title(f'motors {motors}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## frequency selection for propeller noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_source = df_chosen.loc[df_chosen.source==\"None\"]\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, squeeze=False)\n",
+    "fig.set_size_inches(15, 5)\n",
+    "fig.suptitle(chosen_source)\n",
+    "for j, (mic_type, df_mic) in enumerate(df_source.groupby(\"mic_type\")):\n",
+    "    row = df_mic.iloc[0]\n",
+    "    print(row.frequencies.shape)\n",
+    "    print(row.spec.shape)\n",
+    "    print(row.seconds.shape)\n",
+    "    axs[0, j].pcolormesh(row.seconds, row.frequencies, np.log(row.spec.T))\n",
+    "    axs[0, j].set_title(f'{mic_type}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## distance-slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#mic_indices = range(4)\n",
+    "from constants import SPEED_OF_SOUND\n",
+    "CHOSEN_MICS = [3]\n",
+    "CUT_LAST = 3\n",
+    "CUT_FIRST = 3\n",
+    "X_LIM = 20\n",
+    "\n",
+    "for chosen_source, df_source in df_chosen.groupby('source'):\n",
+    "    if chosen_source == \"None\": \n",
+    "        continue\n",
+    "    for mic_type, df_this in df_source.groupby('mic_type'):\n",
+    "            \n",
+    "        if mic_type == 'audio_deck':\n",
+    "            mic_indices = CHOSEN_MICS\n",
+    "            color = 'C0'\n",
+    "        else:\n",
+    "            mic_indices = [0]\n",
+    "            color = 'C1'\n",
+    "            \n",
+    "        fig, axs = plt.subplots(2, 2, squeeze=False)\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        fig.suptitle(chosen_source)\n",
+    "\n",
+    "        for j, (motors, df_motors) in enumerate(df_this.groupby('motors')):\n",
+    "            assert len(df_motors) <= 1, f\"{len(df_motors)} findings for {motors, chosen_source}\"\n",
+    "\n",
+    "            row = df_motors.iloc[0]\n",
+    "            frequencies = row.frequencies\n",
+    "\n",
+    "            signals_f = row.signals_f\n",
+    "            if motors != 'all43000':\n",
+    "                signals_f = signals_f[::-1, :, :]\n",
+    "\n",
+    "            if not chosen_source in ('None', None):\n",
+    "                freq = int(chosen_source.strip('mono'))\n",
+    "                bin_ = np.argmin(abs(frequencies - freq))\n",
+    "                error = abs(frequencies[bin_] - freq)\n",
+    "                if error > 10:\n",
+    "                    print(f'Warning: big diff between {freq} and {frequencies[bin_]}')\n",
+    "            else: \n",
+    "                bin_ = np.argmax(np.sum(np.abs(signals_f), axis=(0, 1))) \n",
+    "                print('max frequency without source:', frequencies[bin_])\n",
+    "\n",
+    "            seconds = row.seconds[CUT_FIRST:-CUT_LAST]\n",
+    "            distances = seconds * 50 / 165.0\n",
+    "            mean_d = np.median(distances[5:]-distances[4:-1])\n",
+    "            expected_period = SPEED_OF_SOUND / frequencies[bin_] * 100 / 2 #\n",
+    "\n",
+    "            for mic_idx in mic_indices:\n",
+    "                spec = np.abs(signals_f[:, mic_idx, bin_])[CUT_FIRST:-CUT_LAST] # times x frequencies\n",
+    "                axs[0, j].plot(distances, spec, label=f'mic{mic_idx}', color=color)\n",
+    "                axs[0, j].set_title(f'motors {motors}')\n",
+    "                \n",
+    "                spec_fft = np.fft.rfft(spec)[1:]\n",
+    "                freqs = np.fft.rfftfreq(len(spec), mean_d)[1:]\n",
+    "                period = 1/freqs\n",
+    "                axs[1, j].semilogx(period, np.abs(spec_fft))\n",
+    "                axs[1, j].axvline(expected_period) # cm\n",
+    "\n",
+    "            axs[0, j].legend(loc='upper right')\n",
+    "            axs[0, j].set_xlim(0,50)\n",
+    "            axs[0, j].set_ylim(min(spec), max(spec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old analysis"
    ]
   },
   {
